# Guild_Buildathon

./: README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: lint.yml
migrations/versions/: b7ed69d93feb_add_final_detailed_client_columns.py
src/micro_automator/: app.py  config.py  extensions.py  services.py  uplink.py
src/micro_automator/models/: __init__.py  client.py  document.py  reconciliation.py  shared.py
src/micro_automator/views/: audits.py  automation.py  chatbot.py  clients.py  dashboard.py  documents.py  reconciliation.py
tests/: test_basic.py
