[tool.poetry]
name = "guild-buildathon"
version = "0.1.0"
description = "Backend for the Guild Buildathon"
authors = ["DipayanDasgupta <deep.dasgupta2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# This line fixes the Python version conflict
python = ">=3.12,<4.0"

# All of your required packages are now listed here
flask = "^3.0.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
flask-cors = "^4.0.0"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
google-generativeai = "^0.8.5"
flask-login = "^0.6.3"
authlib = "^1.6.3"
flask-sqlalchemy = "^3.1.1"
pymupdf = "^1.26.4"
pillow = "^11.3.0"
pytesseract = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"